# weight-recorder

./: .gitignore  CHANGELOG.md  LICENSE  weight-recorder.cabal
app/: Main.hs
data/: schema.sql
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-8.10.7/: package.cache  weight-recorder-0.1.0.0-inplace.conf
src/Entity/: User.hs  WeightRecord.hs
src/Model/: User.hs  WeightRecord.hs
src/Web/: Core.hs  WeightRecorder.hs
src/Web/Action/: Login.hs  NewRecord.hs  Register.hs
src/Web/View/: Main.hs  Start.hs
templates/: main.mustache  start.mustache
